# shrine-exp

./: .gitignore  .gitmodules  Makefile  README.md  build-config.py  dictionary.json  index.html  massageToDictionary.js  package-lock.json  package.json  proverbs.txt  pyproject.toml
transcribe-asl/: A_Transcription_Pose.csv  A_Transcription_Right_Hand.csv  acceptanceTests.ipynb  acceptanceTests.py  buffer_test.ipynb  combine_all.sh  correlation_test.html  correlation_test.ipynb  crawl.py  detect_ir_mediapipe.py  exp_mmpose.ipynb  hand3d_internet_demo.py  live_camera_detection.py  live_camera_detection_mmpose.py  mediapp.py  movement_in_video.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  test.py  testing_notebook.ipynb  to_ir.ipynb  to_ir.py
transcribe-asl/data_in/: from_images.py  mediapp.py  vid_csv2np.py
transcribe-asl/gesture/: README.md  __init__.py  base.py  gesture.py  movement_logic.txt  pyproject.toml
transcribe-asl/gesture_data/: ABANDON_Transcription_Left_Hand.csv  ABANDON_Transcription_Pose.csv  ABANDON_Transcription_Right_Hand.csv  ABBREVIATE_Transcription_Left_Hand.csv  ABBREVIATE_Transcription_Pose.csv  ABBREVIATE_Transcription_Right_Hand.csv  ABOUT_Transcription_Left_Hand.csv  ABOUT_Transcription_Pose.csv  ABOUT_Transcription_Right_Hand.csv  ABOVE_Transcription_Left_Hand.csv  ABOVE_Transcription_Pose.csv  ABOVE_Transcription_Right_Hand.csv  (+1257 more)
website/: about-us.html  asl-a-z.html  asl-poc.html  contact.html  form-process.php  index.html  optimizeImages.js  package-lock.json  package.json  server.js  webpack.config.js
website/js/: app.js
(+397 files in other folders)
