[tool.poetry]
name = "transcribe-asl"
version = "0.1.0"
description = ""
authors = ["Jimmy Scray <jimmy.scray@kochgs.com>"]
readme = "README.md"
packages = [{include = "transcribe-asl"}]

[tool.poetry.dependencies]
python = "^3.11.7"
mediapipe = "^0.10.2"
bs4 = "^0.0.1"
jupyter = "^1.0.0"
google = "^3.0.0"
opencv-python = "^4.8.0.74"
matplotlib = "^3.8.2"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"